--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
+amqp==2.6.1
 asgiref==3.6.0
 backports.zoneinfo==0.2.1
-Django==4.2.1
-sqlparse==0.4.4
+billiard==3.6.4.0
+celery==4.4.7
+Django==4.2
+flower==0.9.7
+humanize==4.6.0
+kombu==4.6.11
+prometheus-client==0.8.0
+pytz==2023.3
+redis==3.5.3
+sqlparse==0.4.3
+tornado==6.3.1
 tzdata==2023.3
+vine==1.3.0
